# King_Mixer

./: .gitignore  CMakeLists.txt  README.md  index.html
King Mixer.vst3/Contents/Resources/: moduleinfo.json
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Analysis/: SpectrumAnalyzer.cpp  SpectrumAnalyzer.h  WaveformBuffer.cpp  WaveformBuffer.h
Source/DSP/: ParametricEQ.cpp  ParametricEQ.h  ReverbSend.cpp  ReverbSend.h  Saturation.cpp  Saturation.h  StereoWidth.cpp
Source/IPC/: InstanceHub.h
Source/Rules/: MixRule.h  MixRuleDatabase.cpp
Source/UI/: CompressorPanel.cpp  CompressorPanel.h  CustomLookAndFeel.cpp  CustomLookAndFeel.h  EQPanel.cpp  GainMixPanel.cpp  GainMixPanel.h  MasterBusPanel.cpp  MasterBusPanel.h  ReverbPanel.cpp  ReverbPanel.h  SaturationPanel.cpp  SaturationPanel.h  TrackEditorPanel.cpp  TrackEditorPanel.h
installer/: KingMixerInstaller.iss  about.txt
